# killer-robot

./: .clang-format  .gitignore  README.md  control_panel.py  history.md  kobingsskjema  kobingsskjema.drawio  shell.nix
.west/: config
3d models/: README.md
3d models/pcb-holder/: robot_pcb_holder.FCStd  robot_pcb_holder.FCStd1  robot_pcb_holder.stl
3d models/rupert-eyes/: eye_black.stl  eye_hvite.stl
3d models/spinner-model/: chassis-v1.FCStd  chassis-v2.FCStd  chassis-v3.FCStd  common-components.FCStd  spinner-model.FCStd  spinner-model.FCStd1
arduino-backup/robot-brain-backup/: README.md  robot-brain-backup.ino  robot-brain.ino
arduino-backup/transmitter-backup/: README.md  (+1 more)
backup-transmitter/: backup-transmitter.ino
control-center/: communication.py  control_panel.py
drivers/: Kconfig
firmware/: CMakeLists.txt  Kconfig  west.yml
python-ble-tests/: bleak_commands.py  bleak_connect.py  rfcomm_connect.py
robot-brain/: CMakeLists.txt  Motor.h  README.md  prj.conf  robot-brain.ino
robot-control-center/: README.md  communication.py  control_panel.py  shell.nix
robot-pcb/: README.md  fp-lib-table  robot-pcb-cache.lib  robot-pcb-rescue.lib  robot-pcb.kicad_pcb  robot-pcb.kicad_pro  robot-pcb.kicad_sch  robot-pcb.pro  robot-pcb.sch  rupert_bitmap_art.kicad_mod  sym-lib-table
transmitter/: CMakeLists.txt  README.md  prj.conf  transmitter.ino
transmitter/boards/: blackpill_f401ce.overlay  esp32.overlay  teensy40.overlay
transmitter/src/: main.c
transmitter/transmitter-circuit/: transmitter-circuit-cache.lib  transmitter-circuit.sch
(+81 files in other folders)
